Changed target of navbar Links to blank

--- a/index.html
+++ b/index.html
@@ -31,11 +31,11 @@
         <div class="row justify-content-center justify-content-lg-between align-items-center text-center">
 
           <div class="col-3">
-            <a href="contactpg/contact.html" class="nav-a">Contact</a>
+            <a href="contactpg/contact.html" class="nav-a" target="_blank">Contact</a>
           </div>
 
           <div class="col-3">
-            <a href="blogpg/blog.html" class="nav-a">Blogs</a>
+            <a href="blogpg/blog.html" class="nav-a" target="_blank">Blogs</a>
           </div>
 
           <div class="col-4">
@@ -51,7 +51,7 @@
 
       <!-- JOIN BUTTON (hidden on md and below) -->
       <div class="col-lg-1 px-0 d-none d-lg-block join" id="joinLink">
-        <a href="login-register/login.html" class="nav-a">Join</a>
+        <a href="login-register/login.html" class="nav-a" target="_blank">Join</a>
       </div>
 
     </div>
@@ -60,6 +60,8 @@
   <!-- NavBar End      -->
   </div>
   <hr>
+  <!-- Cart Section with Confirmation and Cancel Order Buttons -->
+
   <div class="container-fluid py-4">
     <div class="old-cnfrm">
 
