Mobile responsive design

--- a/index.html
+++ b/index.html
@@ -13,57 +13,57 @@
 </head>
 
 <body>
-  <!-- Nav Bar Section -->
-  <div class="navBar">
 
-    <!-- Toggle Button (md and below only) -->
-    <button class="nav-toggle d-lg-none" id="navToggle">
-      ☰
-    </button>
+  <!-- ===========navBar=========== -->
+  <nav class="navbar navBar navbar-expand-lg navbar-light bg-light">
+    <div class="container-fluid">
+      <button class="navbar-toggler nav-toggle d-lg-none" id="navToggle" type="button" data-bs-toggle="collapse"
+        data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false"
+        aria-label="Toggle navigation">
+        ☰
+      </button>
+      <div class="row align-items-center justify-content-between">
 
-    <div class="row align-items-center justify-content-between">
+        <!-- LOGO -->
+        <div class="col-6 col-lg-3 Logo">ABD_Café</div>
 
-      <!-- LOGO -->
-      <div class="col-6 col-lg-3 Logo">ABD_Café</div>
+        <!-- NAV LINKS (hidden on md and below) -->
+        <div class="col-12 col-lg-8 d-none d-lg-block mt-3 mt-lg-0" id="navLinks">
+          <div class="row justify-content-center justify-content-lg-between align-items-center text-center">
 
-      <!-- NAV LINKS (hidden on md and below) -->
-      <div class="col-12 col-lg-8 d-none d-lg-block mt-3 mt-lg-0" id="navLinks">
-        <div class="row justify-content-center justify-content-lg-between align-items-center text-center">
+            <div class="col-3">
+              <a href="contactpg/contact.html" class="nav-a" target="_blank">Contact</a>
+            </div>
 
-          <div class="col-3">
-            <a href="contactpg/contact.html" class="nav-a" target="_blank">Contact</a>
+            <div class="col-3">
+              <a href="blogpg/blog.html" class="nav-a" target="_blank">Blogs</a>
+            </div>
+
+            <div class="col-4">
+              <select id="dessert" name="dessert">
+                <option value="">Menue</option>
+                <option value="#Eat-sec">Dessert</option>
+                <option value="#Drink-sec">Drinks</option>
+              </select>
+            </div>
+
           </div>
-
-          <div class="col-3">
-            <a href="blogpg/blog.html" class="nav-a" target="_blank">Blogs</a>
-          </div>
-
-          <div class="col-4">
-            <select id="dessert" name="dessert">
-              <option value="">Menue</option>
-              <option value="#Eat-sec" >Dessert</option>
-              <option value="#Drink-sec">Drinks</option>
-            </select>
-          </div>
-
         </div>
-      </div>
 
-      <!-- JOIN BUTTON (hidden on md and below) -->
-      <div class="col-lg-1 px-0 d-none d-lg-block join" id="joinLink">
-        <a href="login-register/login.html" class="nav-a" target="_blank">Join</a>
-      </div>
+        <!-- JOIN BUTTON (hidden on md and below) -->
+        <div class="col-lg-1 px-0 d-none d-lg-block join" id="joinLink">
+          <a href="login-register/login.html" class="nav-a" target="_blank">Join</a>
+        </div>
 
+      </div>
     </div>
-
-  </div>
+  </nav>
   <!-- NavBar End      -->
-  </div>
   <hr>
   <!-- Cart Section with Confirmation and Cancel Order Buttons -->
 
   <div class="container-fluid py-4">
-    <div class="old-cnfrm">
+    <div class="old-cnfrm" id="mycart">
 
       <div class="row g-4 justify-content-center align-items-center">
         <div class="col-12">
@@ -127,13 +127,14 @@
     <div class="col-12 outer-c">
       <div class="row g-4 justify-content-center align-items-center">
         <div class="col-12">
+          <button class="back-to-cart-btn"> <a href="#mycart" class="back-to-cart"> <i class="bi bi-cart-plus"></i> Go back To Cart </a></button>
           <div class="row justify-content-center align-items-center">
-            <div class="col-10 inner-c scroll">
+            <div class="inner-c scroll">
 
               <!-- Eatables Section (duplicate and change data as needed) -->
               <h4 id="Eat-sec" class="menue_dir">Dessert</h4>
               <div class="row justify-content-center align-items-center">
-                <div class="col-lg-4 col-md-6 col-sm-12">
+                <div class="col-lg-4 col-6">
                   <div class="product" data-name="Cake" data-price="5.99">
                     <img src="img/Red Velvet Cake.PNG" width="100%">
                     <h5>Red Velvet Cake</h5>
@@ -147,7 +148,7 @@
                     </div>
                   </div>
                 </div>
-                <div class="col-lg-4 col-md-6 col-sm-12">
+                <div class="col-lg-4 col-6">
                   <div class="product" data-name="Classic teramisu" data-price="4.49">
                     <img src="img/classic teramisu.PNG">
                     <h5>Classic Teramisu</h5>
@@ -161,7 +162,7 @@
                     </div>
                   </div>
                 </div>
-                <div class="col-lg-4 col-md-6 col-sm-12">
+                <div class="col-lg-4 col-6">
                   <div class="product" data-name="Vanila Beans" data-price="3.25">
                     <img src="img/vanila beans.PNG">
                     <h5>Vanilla Beans</h5>
@@ -177,7 +178,7 @@
                 </div>
               </div>
               <div class="row">
-                <div class="col-lg-4 col-md-6 col-sm-12">
+                <div class="col-lg-4 col-6">
                   <div class="product" data-name="Lemon Meringu" data-price="3.25">
                     <img src="img/Lemon meringu Pie.PNG">
                     <h5>Lemon Meringu Pie</h5>
@@ -191,7 +192,7 @@
                     </div>
                   </div>
                 </div>
-                <div class="col-lg-4 col-md-6 col-sm-12">
+                <div class="col-lg-4 col-6">
                   <div class="product" data-name="Pistachio Baklava" data-price="3.25">
                     <img src="img/pistachio Baklava.PNG">
                     <h5>Pistachio Baklava</h5>
@@ -205,7 +206,7 @@
                     </div>
                   </div>
                 </div>
-                <div class="col-lg-4 col-md-6 col-sm-12">
+                <div class="col-lg-4 col-6">
                   <div class="product" data-name="waffle" data-price="3.25">
                     <img src="img/waffle with baries.PNG">
                     <h5>Waffle With Baries</h5>
@@ -222,7 +223,7 @@
               </div>
               <div class="row">
 
-                <div class="col-lg-4 col-md-6 col-sm-12">
+                <div class="col-lg-4 col-6">
                   <div class="product" data-name="Salted Caramel Brownie" data-price="3.25">
                     <img src="img/Salted Caramel Brownie.PNG">
                     <h5>Salted Caramel Brownie</h5>
@@ -236,7 +237,7 @@
                     </div>
                   </div>
                 </div>
-                <div class="col-lg-4 col-md-6 col-sm-12">
+                <div class="col-lg-4 col-6">
                   <div class="product" data-name="Vanilla Pana Cotta" data-price="3.25">
                     <img src="img/Vanilla Pana Cotta.PNG">
                     <h5>Vanilla Pana Cotta</h5>
@@ -250,7 +251,7 @@
                     </div>
                   </div>
                 </div>
-                <div class="col-lg-4 col-md-6 col-sm-12">
+                <div class="col-lg-4 col-6">
                   <div class="product" data-name="Macaron Mix" data-price="3.25">
                     <img src="img/Macaron Mix.PNG">
                     <h5>Macaron Mix</h5>
@@ -269,7 +270,7 @@
               <!-- Drinks Sec  -->
               <h4 id="Drink-sec" class="menue_dir">Drinks</h4>
               <div class="row justify-content-center align-items-center">
-                <div class="col-lg-4 col-md-6 col-sm-12">
+                <div class="col-lg-4 col-6">
                   <div class="product" data-name="cappuccino" data-price="5.99">
                     <img src="img/cappuccino.jpg" width="100%">
                     <h5>Cappuccino</h5>
@@ -283,7 +284,7 @@
                     </div>
                   </div>
                 </div>
-                <div class="col-lg-4 col-md-6 col-sm-12">
+                <div class="col-lg-4 col-6">
                   <div class="product" data-name="Mocha" data-price="4.49">
                     <img src="img/Mocha.jpg">
                     <h5>Classic Mocha</h5>
@@ -297,7 +298,7 @@
                     </div>
                   </div>
                 </div>
-                <div class="col-lg-4 col-md-6 col-sm-12">
+                <div class="col-lg-4 col-6">
                   <div class="product" data-name="hot chocolate" data-price="3.25">
                     <img src="img/hot chocolate.jpg">
                     <h5>Hot Bhocolate</h5>
