--- a/index.html
+++ b/index.html
@@ -17,15 +17,18 @@
   <!-- ===========navBar=========== -->
   <nav class="navbar navBar navbar-expand-lg navbar-light bg-light">
     <div class="container-fluid">
-      <button class="navbar-toggler nav-toggle d-lg-none" id="navToggle" type="button" data-bs-toggle="collapse"
-        data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false"
-        aria-label="Toggle navigation">
-        ☰
-      </button>
+     
       <div class="row align-items-center justify-content-between">
 
         <!-- LOGO -->
         <div class="col-6 col-lg-3 Logo">ABD_Café</div>
+         <div class="col-6 d-lg-none">
+          <button class="navbar-toggler nav-toggle d-lg-none" id="navToggle" type="button" data-bs-toggle="collapse"
+        data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false"
+        aria-label="Toggle navigation">
+        ☰
+      </button>
+         </div>
 
         <!-- NAV LINKS (hidden on md and below) -->
         <div class="col-12 col-lg-8 d-none d-lg-block mt-3 mt-lg-0" id="navLinks">
@@ -122,13 +125,15 @@
       </div>
     </div>
 
+    <button class="back-to-cart-btn"> <a href="#mycart" id="back-to-cart"> <i class="bi bi-cart-plus"></i> </a>
+          </button>
+
     <!-- PRODUCT LIST -->
     <h2 id="menue" class="menue_dir">Menue</h2>
     <div class="col-12 outer-c">
       <div class="row g-4 justify-content-center align-items-center">
         <div class="col-12">
-          <button class="back-to-cart-btn"> <a href="#mycart" id="back-to-cart"> <i class="bi bi-cart-plus"></i> </a>
-          </button>
+          
           <div class="row justify-content-center align-items-center">
             <div class="inner-c scroll">
 
@@ -329,9 +334,9 @@
       <div class="row gy-4">
         <!-- About Section -->
         <div class="col-md-3 col-12">
-          <h5 class="footer-title">MyWebsite</h5>
+          <h5 class="footer-title">Our Website</h5>
           <p class="footer-text">
-            Your go-to platform for amazing content and services. Explore, connect, and stay updated.
+            Visit our cafe or use our website to order delicious dessert and hot drinks.
           </p>
         </div>
 
@@ -351,9 +356,9 @@
         <div class="col-md-3 col-6">
           <h5 class="footer-title">Contact</h5>
           <ul class="list-unstyled footer-links">
-            <li>Email: info@mywebsite.com</li>
-            <li>Phone: +1 (123) 456-7890</li>
-            <li>Address: 123 Main Street, City, Country</li>
+            <li>Email: info@ABD_Café.com</li>
+            <li>Phone: 0300-1234567</li>
+            <li>Address: Sialkot Baipass, Gujranwala, Pakistan</li>
           </ul>
         </div>
 
@@ -361,17 +366,17 @@
         <div class="col-md-3 col-12">
           <h5 class="footer-title">Newsletter</h5>
           <p class="footer-text">Use the Join Link at the top and join our community to get our latest updates.</p>
-          <!-- <form class="footer-form d-flex flex-column flex-sm-row gap-2">
+          <form class="footer-form d-flex flex-column flex-sm-row gap-2">
                     <input type="email" class="form-control" placeholder="Enter your email" required>
                     <button type="submit" class="btn btn-gradient">Subscribe</button>
-                </form> -->
+                </form>
         </div>
       </div>
 
       <!-- Footer bottom -->
       <div
         class="footer-bottom mt-5 pt-3 border-top d-flex flex-column flex-sm-row justify-content-between align-items-center">
-        <p class="mb-2 mb-sm-0">&copy; 2025 MyWebsite. All rights reserved.</p>
+        <p class="mb-2 mb-sm-0">&copy; 2025 ABD_Café. All rights reserved.</p>
         <div class="social-icons">
           <a href="#" class="social-link">FB</a>
           <a href="#" class="social-link">TW</a>
